--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,15 @@
 }
 .container{
     width: 100%;
-    height: 100vh;
-    background-color: #433c3c93;
+    min-height: auto;
+    background-color: #433c3c47;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 50px;
+    flex-wrap: wrap;
+    gap: 20px;
+    position: relative;
 }
 .shoping-card{
     width: 400px;
@@ -29,8 +32,12 @@
     padding: 20px;
     /* background-color: plum; */
 }
+.shoping-card hr{
+  margin-bottom: 130px;
+}
 table th{
     padding: 10px;
+   
 }
 table tr td{
     padding: 10px;
@@ -72,6 +79,7 @@ table tr td{
 span{
     border: 1px solid black;
     padding: 5px 10px;
+   
 }
 .total{
     text-align: center;
@@ -79,8 +87,9 @@ span{
 .product-card{
     width: 400px;
     min-height: auto;
-    background-color: orange;
+    background-color: #726d6d8c;
     flex: 1;
+    position: relative;
 }
 .order-summary{
     display: flex;
@@ -105,6 +114,7 @@ select{
     margin: 10px 0;
     border-radius: 5px;
     border: none;
+    background-color: #ffffff85;
 }
 .discount{
     padding: 20px;
@@ -115,6 +125,7 @@ select{
     margin: 10px 0;
     border-radius: 5px;
     border: none;
+    background-color: #ffffff85;
 }
 .apply-btn{
     width: 100px;
@@ -122,7 +133,7 @@ select{
     margin: 10px 0;
     border-radius: 5px;
     border: none;
-    background-color: #433c3c93;
+    background-color: #ff000061;
     color: white;
     cursor: pointer;
 }
@@ -149,7 +160,30 @@ select{
     margin: 10px 0;
     border-radius: 5px;
     border: none;
-    background-color: #433c3c93;
+    background-color: #0000ff73;
     color: white;
+    font-weight: 500;
     cursor: pointer;
+}
+.order-comfirm{
+width: 50%;
+height: 100px;
+background-color: #ff000061;
+/* background-color: black; */
+position: absolute;
+top: 150px;
+left: 50px;
+right: 50px;
+transform: scale(0);
+transition: 0.3s;
+transform-origin: top center;
+display: flex;
+justify-content: center;
+align-items: center;
+text-align: center;
+color: white;
+}
+.show{
+    transform: scale(1);
+    z-index: 1000;
 }
